[gd_scene load_steps=4 format=3 uid="uid://ddvfmgqu55y0c"]

[ext_resource type="Script" path="res://scenes/home/home.gd" id="1_1qry0"]
[ext_resource type="PackedScene" uid="uid://nka4naavdjhg" path="res://player.tscn" id="2_m1b20"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i2m2a"]
size = Vector2(25, 459.899)

[node name="Home" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_1qry0")

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_right = 45.0
offset_bottom = 31.0
text = "Back"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 320.0
offset_right = 423.0
offset_bottom = 136.0

[node name="Map" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Map"

[node name="Quick-Battle" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quick Battle"

[node name="Shop" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Shop"

[node name="Deck" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Deck"

[node name="Player" parent="." instance=ExtResource("2_m1b20")]

[node name="Vertical Borders" type="StaticBody2D" parent="."]

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Vertical Borders"]
position = Vector2(-16, 128)
rotation = 0.000272967
shape = SubResource("RectangleShape2D_i2m2a")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Vertical Borders"]
position = Vector2(436.5, 136)
shape = SubResource("RectangleShape2D_i2m2a")

[node name="Horizontal Borders" type="StaticBody2D" parent="."]
position = Vector2(8, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Horizontal Borders"]
position = Vector2(211.9, -16.0006)
rotation = -1.57066
shape = SubResource("RectangleShape2D_i2m2a")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Horizontal Borders"]
position = Vector2(213.951, 255.993)
rotation = -1.56724
shape = SubResource("RectangleShape2D_i2m2a")

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="VBoxContainer/Map" to="." method="_on_map_pressed"]
[connection signal="pressed" from="VBoxContainer/Deck" to="." method="_on_deck_pressed"]
